--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,15 +1,46 @@
-html,
-body {
-  background-color: #fff;
+html {
+  height: 100%;
   color: #636b6f;
   font-family: "Nunito", sans-serif;
   font-weight: 200;
-  height: 100vh;
   margin: 0;
 }
 
 body {
   background-color: #f5f5f5;
   border: 1px solid transparent;
+}
+
+.hidden {
+  display: none;
+}
+
+.review {
+  margin-bottom: 15px;
+}
+
+.review_header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.review_image {
+  max-width: 320px;
+  max-height: 240px;
+}
+
+.review_footer {
+  color: #aaa;
+  font-size: 0.8em;
+}
+
+.adm-btn {
+  font-size: 0.8em;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+}
+
+.adm-btn_disabled {
+  color: #aaa;
 }
 
